--- a/app/src/main/res/layout/activity_forecast.xml
+++ b/app/src/main/res/layout/activity_forecast.xml
@@ -20,5 +20,6 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/layout_item"/>
+        tools:listitem="@layout/layout_item"
+        android:layoutAnimation="@anim/layout_animation"/>
 </LinearLayout>
